--- a/app/build.gradle
+++ b/app/build.gradle
@@ -80,7 +80,7 @@ dependencies {
     // Preference
     implementation "androidx.preference:preference:1.1.0"
 
-    //Location
+    //LocationEntry
     implementation "com.google.android.gms:play-services-location:17.0.0"
 
     // New Material Design
